<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/trending_now"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_bar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_see_all_trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView3" />

        <ProgressBar
            android:id="@+id/loading_trending"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/yellow_energy"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/textView3"
            app:layout_constraintStart_toEndOf="@id/textView3"
            app:layout_constraintBottom_toBottomOf="@+id/textView3" />

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/iv_banner_movie"
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:iss_auto_cycle="true"
            app:iss_corner_radius="24"
            app:iss_delay="0"
            app:iss_error_image="@android:color/darker_gray"
            app:iss_period="2000"
            app:iss_placeholder="@android:color/darker_gray"
            app:iss_selected_dot="@drawable/ic_indicator_selected_dot"
            app:iss_unselected_dot="@drawable/ic_indicator_unselected_dot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <include
            android:id="@+id/errorViewTrending"
            android:layout_width="0dp"
            android:layout_height="0dp"
            layout="@layout/error_view"
            app:layout_constraintBottom_toBottomOf="@+id/iv_banner_movie"
            app:layout_constraintEnd_toEndOf="@+id/iv_banner_movie"
            app:layout_constraintStart_toStartOf="@+id/iv_banner_movie"
            app:layout_constraintTop_toTopOf="@+id/iv_banner_movie" />

        <com.elanyudho.movrefapplication.utils.widget.CustomSearchBar
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_searchview"
            android:backgroundTint="@color/white"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"
            android:queryHint="@string/query_hint_search_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:useAdditionalButton="false" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_suggestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/search_bar"
            app:layout_constraintStart_toStartOf="@+id/search_bar"
            app:layout_constraintTop_toBottomOf="@+id/search_bar"
            tools:listitem="@layout/item_search_suggestion" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/title_content_find_movie"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_banner_movie" />

        <ProgressBar
            android:id="@+id/loading_find_next_movie"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/yellow_energy"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/textView1"
            app:layout_constraintStart_toEndOf="@id/textView1"
            app:layout_constraintBottom_toBottomOf="@+id/textView1" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:checkedChip="@+id/chip_popular">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_popular"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textColor="@color/chip_text"
                app:chipBackgroundColor="@color/chip_background" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_top_rated"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:textColor="@color/chip_text"
                app:chipBackgroundColor="@color/chip_background" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_upcoming"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                android:textColor="@color/chip_text"
                app:chipBackgroundColor="@color/chip_background" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_see_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/see_all"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/chipGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/chipGroup"
            app:layout_constraintTop_toTopOf="@+id/chipGroup" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_find_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_min="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup"
            app:reverseLayout="false"
            tools:listitem="@layout/item_movie_linear_horizontal" />

        <include
            android:id="@+id/errorViewNextWatch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="24sp"
            layout="@layout/error_view"
            app:layout_constraintBottom_toBottomOf="@+id/rv_find_movie"
            app:layout_constraintEnd_toEndOf="@+id/rv_find_movie"
            app:layout_constraintStart_toStartOf="@+id/rv_find_movie"
            app:layout_constraintTop_toTopOf="@+id/rv_find_movie" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Popular Actor and Actress"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup_Genre" />

        <ProgressBar
            android:id="@+id/loading_popular_people"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/yellow_energy"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/textView2"
            app:layout_constraintStart_toEndOf="@id/textView2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Find movie by genre"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/rv_find_movie" />

        <ProgressBar
            android:id="@+id/loading_genre"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/yellow_energy"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/textView4"
            app:layout_constraintStart_toEndOf="@id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/textView4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_see_all_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/see_all"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_Genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:checkedChip="@+id/chip_popular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:singleSelection="true" />

        <include
            android:id="@+id/errorViewGenre"
            layout="@layout/error_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/chipGroup_Genre"
            app:layout_constraintEnd_toEndOf="@+id/chipGroup_Genre"
            app:layout_constraintStart_toStartOf="@+id/chipGroup_Genre"
            app:layout_constraintTop_toTopOf="@+id/chipGroup_Genre" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_people"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_max="500dp"
            app:layout_constraintHeight_min="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0"
            app:reverseLayout="false"
            tools:listitem="@layout/item_people_linear_vertical" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_see_all_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/see_all"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <include
            android:id="@+id/errorViewPeople"
            layout="@layout/error_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="@id/rv_popular_people"
            app:layout_constraintStart_toStartOf="@id/rv_popular_people"
            app:layout_constraintTop_toTopOf="@id/rv_popular_people"
            app:layout_constraintBottom_toBottomOf="@id/rv_popular_people"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>