<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".ui.detailmovie.DetailMovieActivity">

    <include
        android:id="@+id/headerDetailMovie"
        layout="@layout/header_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerDetailMovie">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_poster_movie"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cv_genre"
                app:shapeAppearance="@style/Theme.MovRefApplication.RoundedImageView16"
                tools:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:id="@+id/cv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_detail_part"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                app:layout_constraintBottom_toTopOf="@+id/cv_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/ic_genre"
                    tools:layout_editor_absoluteX="321dp"
                    tools:layout_editor_absoluteY="43dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="0dp"
                    android:text="@string/genre"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_genre_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="@string/genre" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cv_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_detail_part"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                app:layout_constraintBottom_toTopOf="@+id/cv_rate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/cv_genre">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/ic_duration"
                    tools:layout_editor_absoluteX="321dp"
                    tools:layout_editor_absoluteY="43dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="0dp"
                    android:text="@string/duration"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_duration_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="@string/duration" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cv_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_detail_part"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/cv_duration"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/ic_rate"
                    tools:layout_editor_absoluteX="321dp"
                    tools:layout_editor_absoluteY="43dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="0dp"
                    android:text="@string/rate"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_rate_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="@string/rate" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="Spiderman 3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster_movie" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/cast"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
                app:reverseLayout="false"
                tools:listitem="@layout/item_cast" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="Release Date"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_cast" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                app:lineHeight="20dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView6"
                tools:text="2022-07-07" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
                app:lineHeight="20sp"
                tools:text="The Lost City mengisahkan tentang seorang penulis novel yang hobi menyendiri bernama Loretta Sage. Ia baru saja menyelesaikan novel romantis terbarunya yang bercerita tentang kota yang hilang. Saat tengah melakukan promosi untuk novel terbarunya, Loretta Sage diculik oleh lelaki bernama Abigail Fairfax." />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/recommendations_movie"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommendation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:minHeight="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView5"
                app:reverseLayout="false"
                tools:listitem="@layout/item_movie_linear_horizontal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/not_available"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView5"
                app:layout_constraintVertical_bias="0.0"
                app:lineHeight="20sp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>